add some test files

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,15 @@
 
 .Sha
 {
-  font-size: 30px;
+  font-size: 10px;
+}
+#FacebookOutlined
+{
+  float: left;
+}
+.a
+{
+  float: right;
 }
 
 .App-logo {
