--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,11 @@
 @import '~antd/dist/antd.css';
-.App {
-  text-align: center;
-}
 
-.Sha
-{
-  font-size: 10px;
-}
-#FacebookOutlined
-{
-  float: left;
-}
-.a
-{
-  float: right;
+.App {
+  text-align: left;
 }
 
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spn
-  in infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -40,14 +20,5 @@
 }
 
 .App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  color: #09d3ac;
 }
